# skill-loader

./: .gitignore  README.md  SKILL_LOADER.md  pyproject.toml
src/skill_loader/: __init__.py  loader.py
src/skill_loader/skills/example_skill/: SKILL.md
src/skill_loader/skills/example_skill/scripts/: __init__.py  hello.py
tests/: test_loader.py
