[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-loader"
version = "0.1.0"
description = "A model-agnostic skill loading and execution framework following Claude Skill specification"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "yejinlei", email = "4010896@qq.com"}
]
keywords = [
    "skill",
    "loader",
    "ai",
    "llm",
    "claude",
    "agent",
    "dynamic-loading",
    "plugin",
    "framework",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "build>=0.10",
    "twine>=4.0",
]

[project.urls]
Homepage = "https://github.com/yejinlei/skill-loader"
Documentation = "https://github.com/yejinlei/skill-loader#readme"
Repository = "https://github.com/yejinlei/skill-loader.git"
Issues = "https://github.com/yejinlei/skill-loader/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
skill_loader = ["py.typed", "skills/**/SKILL.md"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
